--- a/mysql.yaml
+++ b/mysql.yaml
@@ -15,11 +15,16 @@ spec:
         app: mysql
     spec:
       containers:
-        - name: mysql
+        - name: mysqldb
           image: mysql:8.1.0
           ports:
             - containerPort: 3306
           env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: mysql-password
             - name: MYSQL_USER
               valueFrom:
                 secretKeyRef:
