--- a/mysql-config.yaml
+++ b/mysql-config.yaml
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
   name: mysql-config
 data:
-  mysql-url: mysql-service
+  mysql-url: jdbc:mysql://10.102.4.76:3306/store?createDatabaseIfNotExist=true
